<resources>
    <string name="app_name">HogentApp</string>

    <!--settings-->
    <string name="online_sync">online_sync</string>
    <string name="online_sync_title">Save data online</string>
    <string name="online_sync_enabled">your data will also be stored and updated online</string>
    <string name="online_sync_disabled">your data will not be updated online</string>

    <string name="delete">delete</string>
    <string name="delete_title">Delete online data</string>
    <string name="delete_data">Delete online data</string>
    <string name="delete_cancel">Cancel</string>
    <string name="delete_summary">Delete your online data, local data will still be stored</string>
    <string name="delete_confirmation">Delete your online data</string>


    <string name="day_start">day_start</string>
    <string name="day_start_title">Day start</string>
    <string name="day_start_summary">You will create your day\'s goals at %1s</string>

    <string name="day_end">day_end</string>
    <string name="day_end_title">Day end</string>
    <string name="day_end_summary">You will review your day\'s goals at %1s</string>
    <string name="title_day_list">Days</string>
    <string name="title_day_detail">Day Detail</string>
    <string name="title_activity_day_detail">DayDetailActivity</string>

    <!--layout-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="summary_text">Summary</string>
    <string name="title_text">Title</string>
    <string name="add_a_new_goal_to_your_day">Add a new goal to your day</string>
    <string name="create_day">Create day</string>
    <string name="back_to_overview">Back to overview</string>
    <string name="complete_day_button">Complete Day</string>

    <!--notification channel-->
    <string name="channel_name">review</string>
    <string name="channel_description">review of daily goals</string>
    <string name="settings">Settings</string>
    <string name="review">Review</string>

</resources>
