<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="bartarys.github.io.hogentapp.day.DayListViewModel"/>

        <import type="bartarys.github.io.hogentapp.day.DayListViewModelKt"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".day.DayListFragment"
    >

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:text="@string/today"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:id="@+id/today"/>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_days"
                android:visibility="@{DayListViewModelKt.listToVisibility(viewModel.items)}"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/today" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/settings"/>
        <Button
                android:text="@string/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/review" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/settings" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>