<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable name="viewModel" type="bartarys.github.io.hogentapp.day.start.NewGoalViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".day.start.NewGoalFragment">


        <EditText
                android:text="@={viewModel.title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/title_text"
                android:ems="10"
                android:id="@+id/editText" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
        <EditText
                android:text="@={viewModel.description}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/summary_text"
                android:ems="10"
                android:id="@+id/editText2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:id="@+id/addButtonaddButton"
                android:src="@drawable/ic_add_circle_black_24dp"
                android:layout_margin="16dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/add_a_new_goal_to_your_day"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>